:bug: Fix spacing between items

--- a/styles/style.css
+++ b/styles/style.css
@@ -68,6 +68,7 @@ h1 {
     border-radius: 50%;
     transition: transform 0.2s;
     margin-right: 1rem;
+    margin-bottom: 0.75rem;
 }
 
 #socials .btn-icon:last-child {
@@ -158,6 +159,10 @@ html {
     justify-content: space-between;
     margin: 0 auto;
     padding: 0 20px;
+}
+
+.footer-info {
+    margin-bottom: 1rem;
 }
 
 .footer-info h3 {
